Last commit was wrong. This should fix button mobile issues

--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -66,6 +66,8 @@ body{
 
 .input-button {
   color: white;
+  text-align: center;
+  padding: 0;
   font-size: 20px;
   border: none;
   width: 50px;
